# omnyssh

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: release.yml
config/: default.toml
crates/omnyssh/: Cargo.toml  build.rs
crates/omnyssh-core/: Cargo.toml  build.rs
crates/omnyssh-core/src/: event.rs  lib.rs  update.rs
crates/omnyssh-core/src/config/: app_config.rs
crates/omnyssh-core/src/ssh/: discovery.rs  key_setup.rs  metrics.rs  pool.rs  pty.rs  sftp.rs
crates/omnyssh-core/src/ssh/services/: docker.rs
crates/omnyssh-core/src/utils/: mod.rs  platform.rs  scroll.rs
crates/omnyssh-core/tests/: log_cleanup.rs  metrics_parser.rs
crates/omnyssh/src/: cli.rs  event.rs  keybindings.rs  lib.rs  main.rs  term_input.rs
crates/omnyssh/src/app/: action.rs  actions.rs  file_manager.rs  host.rs  input.rs  mod.rs  snippets.rs  terminal.rs  update.rs
crates/omnyssh/src/config/: app_config.rs  mod.rs  snippets.rs
crates/omnyssh/src/ssh/: client.rs  discovery.rs  key_setup.rs  metrics.rs  pool.rs  probe.rs  session.rs  sftp.rs
crates/omnyssh/src/ssh/services/: docker.rs  nginx.rs  postgresql.rs
crates/omnyssh/src/ui/: card.rs  dashboard.rs  detail_view.rs  file_manager.rs  host_list.rs  popup.rs  snippets.rs  status_bar.rs  theme.rs
crates/omnyssh/src/utils/: file_icons.rs  mod.rs
crates/omnyssh/tests/: log_cleanup.rs  metrics_parser.rs
doc/: omny.1
src/: app.rs  event.rs  lib.rs  main.rs
src/app/: action.rs  actions.rs  file_manager.rs  host.rs  mod.rs  snippets.rs  terminal.rs
src/config/: app_config.rs  mod.rs
src/ssh/: discovery.rs  key_setup.rs  mod.rs  pool.rs  pty.rs  session.rs
src/ssh/services/: docker.rs  mod.rs  nodejs.rs  redis.rs
src/ui/: detail_view.rs  mod.rs  popup.rs  theme.rs
src/utils/: mod.rs  paste.rs  platform.rs
tests/: ssh_config_parser.rs
