[workspace]
resolver = "2"
members = ["crates/omnyssh"]

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/timhartmann7/omnyssh"

[workspace.dependencies]
# Async runtime — explicit features only; avoids pulling in unused tokio subsystems.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "process", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
dirs = "5"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
