[package]
name = "omnyssh-core"
version.workspace = true
edition.workspace = true
description = "SSH engine, configs, metrics, and updater powering OmnySSH frontends"
license.workspace = true
repository.workspace = true
keywords = ["ssh", "devops"]
categories = ["network-programming"]

[dependencies]
# Serialization
serde = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Cross-platform paths (P-CROSS-01)
dirs = { workspace = true }

# Terminal emulator — vt100 screen model (PTY is provided by russh channels)
vt100 = { package = "vt100-omnyssh", version = "0.15" }

# Update checker — GitHub Releases query, archive extraction, self-replace
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
semver = "1"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
self-replace = "1"
